# seastats

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: run_tests.yml
notebooks/: example_abed.ipynb
requirements/: requirements-dev.txt  requirements.txt
seastats/: __init__.py  stats.py  storms.py  utils.py
tests/: compute_stats_test.py
tests/data/: abed_obs.parquet  abed_sim.parquet
