[tool.poetry]
name = "seastats"
version = "0.1.0"
description = "package for metocean statistics"
authors = ["tomsail <saillour.thomas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pandas = "*"
xarray = "*"
scipy = "*"
pyextremes = "*"
pyarrow = "*"
hvplot = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ipykernel = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
strict = true
ignore_missing_imports = true
