[tool.poetry]
name = "seastats"
version = "0.1.0"
description = "package for metocean statistics"
authors = [
  "tomsail <saillour.thomas@gmail.com>",
  "pmav99 <pmav99@gmail.com>",
]
license = 'EUPL-1.2'
readme = "README.md"
repository = "https://github.com/oceanmodeling/seastats.git"
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pandas = {version = "*", extras = ["pyarrow", "performance"]}
pyextremes = "*"

[tool.poetry.group.dev.dependencies]
covdefaults = "*"
hvplot = "*"
ipykernel = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
strict = true
ignore_missing_imports = true

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["seastats"]
omit = []
parallel = true
sigterm = true

[tool.coverage.report]
fail_under = 86.8
